# aioitertools

./: .flake8  .gitignore  .pylint  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: issue_template.md
.github/workflows/: build.yml  ci.yml
aioitertools/: __init__.py  __version__.py  asyncio.py  builtins.py  helpers.py  itertools.py  more_itertools.py  types.py
aioitertools/tests/: __init__.py  asyncio.py  builtins.py  helpers.py  itertools.py  more_itertools.py
docs/: api.rst  conf.py  index.rst
docs/_static/: custom.css
