[tool.poetry]
name = "aioitertools"
version = "0.12.0"
description = "AsyncIO iteration tools"
authors = ["Amethyst Reese <amethyst@n7.gg>"]
license = "MIT"
readme = "README.md"
homepage = "https://omnilib.readthedocs.io/en/latest/project/aioitertools.html"
repository = "https://github.com/omnilib/aioitertools"
documentation = "https://aioitertools.omnilib.dev/en/stable/index.html"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
keywords = ["aioitertools", "asyncio", "itertools", "more-itertools"]
include = [
    "CHANGELOG.md",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
    "README.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.9"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
attribution = "^1.8.0"
black = "^24.4.2"
coverage = "^7.5.4"
flake8 = "^7.1.0"
mypy = "^1.10.1"
ruff = "^0.5.0"
ufmt = "^2.7.0"
usort = "^1.0.8.post1"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-mdinclude = "^0.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-random-order = "^1.1.1"
pytest-xdist = "^3.6.1"

[tool.attribution]
name = "aioitertools"
package = "aioitertools"
version_file = true
ignored_authors = ["dependabot[bot]"]

[tool.coverage.run]
branch = true
include = ["aioitertools/*"]
omit = ["aioitertools/tests/*"]

[tool.coverage.report]
fail_under = 90
precision = 2
skip_covered = true
skip_empty = true
show_missing = true

[tool.mypy]
packages = ["aioitertools/*"]
exclude = ["aioitertools/tests/*"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
