[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "aioitertools"
readme = "README.md"
authors = [{ name = "Amethyst Reese", email = "amethyst@n7.gg" }]
license = { file = "LICENSE" }
dynamic = ["version", "description"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"
dependencies = ["typing_extensions>=4.0; python_version < '3.10'"]

[project.optional-dependencies]
dev = [
    "attribution==1.8.0",
    "black==24.8.0",
    "build>=1.2",
    "coverage==7.6.1",
    "flake8==7.1.1",
    "flit==3.9.0",
    "mypy==1.11.2",
    "usort==1.0.8.post1",
    "ufmt==2.7.1",
]
docs = [
    "sphinx==8.0.2",
    "sphinx-mdinclude==0.6.2",
]

[project.urls]
Documentation = "https://aioitertools.omnilib.dev"
Github = "https://github.com/omnilib/aioitertools"

[tool.flit.sdist]
exclude = [".github/"]

[tool.attribution]
name = "aioitertools"
package = "aioitertools"
version_file = true
ignored_authors = ["dependabot[bot]"]

[tool.coverage.run]
branch = true
include = ["aioitertools/*"]
omit = ["aioitertools/tests/*"]

[tool.coverage.report]
fail_under = 97
precision = 1
show_missing = true
skip_covered = true

[tool.mypy]
# strict = true
ignore_missing_imports = true
